--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
     min-height: 34rem;
 }
 
-.groupe {
+.group {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -56,9 +56,8 @@ body {
     border: 1px solid lightgray;
 }
 
-.groupe:nth-child(1) {
+.group:nth-child(1) {
     min-height: 19rem;
-
 }
 
 .instagram-logo {
@@ -128,6 +127,8 @@ body {
     background-image: url('./img/googleplay-button.png');
 }
 
+
+
 @media (max-width: 1024px) {
     .instagram-wrapper {
         width: 90%;
@@ -151,7 +152,7 @@ body {
         width: 100%;
     }
 
-    .groupe {
-        border: #ffffff solid transparent;
+    .group {
+        border: 1px solid transparent;
     }
 }
