--- a/style.css
+++ b/style.css
@@ -81,6 +81,8 @@ body {
     color: #ffffff;
     padding: 8px;
     border-radius: 4px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 600;
 }
 
 .instagram-logout {
@@ -97,20 +99,26 @@ body {
 }
 
 .get-the-app {
+    color: #262626;
+    color: rgb(38, 38, 38);
+    font-size: 14px;
+    line-height: 18px;    
+    text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: center;    
     width: 100%;
     padding: 1.3rem 0;
 }
 
 .download {
+    border-radius: 5px;
     display: flex;
     width: 100%;
     justify-content: space-evenly;
     align-items: center;
-    padding: 1rem;
+    padding: 1rem;    
 }
 
 .app-download {
